# dotfiles

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  brew_packages.txt  mkdocs.yml  pacman-packages.txt  requirements.txt  setup.sh  spec-review-output.md
scripts/tidal-importer/: README.md  pyproject.toml
scripts/tidal-importer/tests/: conftest.py  test_client.py  test_importer.py  test_integration.py  test_matching.py  test_paths.py  test_reconcile.py  test_sanitize.py
scripts/tidal-importer/tests/identity/: test_confidence.py  test_db.py  test_discogs.py  test_integration.py  test_matching.py  test_models.py  test_musicbrainz.py  test_rate_limiter.py  test_resolver.py  test_tidal_source.py
scripts/tidal-importer/tests/sequencer/: test_cache.py  test_classifier.py  test_cli_sequence.py  test_metadata.py  test_modifiers.py  test_optimizer.py  test_profiles.py  test_scoring.py
scripts/tidal-importer/tidal_importer/: __init__.py  __main__.py  cli.py  client.py  importer.py  matching.py  paths.py  reconcile.py  sanitize.py
scripts/tidal-importer/tidal_importer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/tidal-importer/tidal_importer/identity/: __init__.py  confidence.py  db.py  matching.py  models.py  rate_limiter.py  resolver.py
scripts/tidal-importer/tidal_importer/sequencer/: __init__.py  cache.py  classifier.py  metadata.py  modifiers.py  optimizer.py  profiles.py  scoring.py
tools/tuneshift/: .coverage  .gitignore  CLAUDE.md  README.md  pyproject.toml  tuneshift.db
tools/tuneshift/docs/: AUDIT-2026-07-02.md  CLI.md  index.md  locks.md  matching-known-limits.md  plan-apply.md  preferences.md  resolution-enrichment.md  roadmap.md  version-selection.md  workflows.md
tools/tuneshift/tests/: conftest.py  test_add_cmd.py  test_add_library_first.py  test_alias_cmd.py  test_artist_dedup_migration.py  test_audit_cmd.py  test_batch_audit_concept.py  test_batch_cmd.py  test_batch_operations.py  test_candidate_metadata_explicit.py  test_chunk1_review_fixes.py  test_classifier_expanded.py  test_classifier_timeout_ac7.py  test_cli_logging_ac6.py  test_compose_cmd.py  test_composer_candidate.py  test_composer_e2e.py  test_composer_gaps.py  test_composer_matcher.py  test_composer_models.py  test_composer_parser.py  test_composer_reviewer.py  test_composer_sequencer.py  test_concept_acceptance_db.py  test_concept_llm.py  test_concept_rules.py  test_coverage_quarantine.py  test_curate_cmd.py  test_curation_scoring.py  test_curator.py  test_db.py  test_db_artist_aliases.py  test_db_runtime_library_link.py  test_db_update_artist.py  test_diff_cmd.py  test_diff_live_presence.py  test_doctor_applier.py  test_doctor_cmd.py  test_doctor_orphans.py  test_doctor_plan.py  (+90 more)
tools/tuneshift/tests/gold/: acceptance.json  config.py  dataset.py  runner.py  test_acceptance_config.py  test_acceptance_gate.py  test_baseline.py  test_winner_parity.py
tools/tuneshift/tests/identity/: conftest.py  test_confidence.py  test_db_migration.py  test_discogs.py  (+7 more)
tools/tuneshift/tuneshift/: __init__.py  __main__.py  cli.py  db.py  ingest.py  matching.py  models.py  reconcile.py  reconcile_prefs.py
(+316 files in other folders)
