[project]
name = "tidal-importer"
version = "0.2.0"
description = "Import CSV playlists into Tidal with fuzzy matching and audio-aware sequencing"
requires-python = ">=3.10"
dependencies = [
    "tidalapi==0.8.11",
    "spotipy>=2.23",
    "musicbrainzngs>=0.7",
    "pylast>=5.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "python3-discogs-client>=2.7",
    "rapidfuzz>=3.0",
]

[project.scripts]
tidal-importer = "tidal_importer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "vcrpy>=6.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "integration: live API tests (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"
